# SPOT

./: .gitignore  readme.md
GasNetwork/: example_mgs.m  example_mgs_bidirectional.m
GeometricPerception/: example_outlier-free_pnp.py  example_outlier-robust_wahba.py  sdp_pnp.py  utils.py
MATLAB-examples/: PlanarHand_MATLAB.m  PlanarHand_goodplot.m  PlanarHand_test.m  PlanarHand_testplot.m  PlanarHand_tssos.jl  PlanarHand_visualize.m  Plot.txt  PushBot_MATLAB.m  PushBot_goodplot.m  PushBot_test.m  PushBot_testplot.m  PushBot_tssos.jl  PushBot_visualize.m  PushBoxTunnel2_MATLAB.m  PushBoxTunnel2_goodplot.m  PushBoxTunnel2_test.m  PushBoxTunnel2_testplot.m  PushBoxTunnel2_tssos.jl  PushBoxTunnel2_visualize.m  PushBox_MATLAB.m  PushBox_goodplot.m  PushBox_test.m  PushBox_testplot.m  PushBox_tssos.jl  PushBox_visualize.m  PushT_MATLAB.m  PushT_goodplot.m  PushT_test.m  PushT_testplot.m  PushT_tssos.jl  PushT_visualize.m  Result.txt  Test_Gap.m  julia_solution.txt  matlab_solution.txt  pendulum_MATLAB.m  read_write_txt.m  test_CSTSS_MATLAB.m
Python-examples/: planarHand_Python.py  pushBot_Python.py  pushBoxTunnel2_Python.py  pushBox_Python.py  pushT_Python.py  test_CSTSS_Python.py
SPOT/: CMakeLists.txt
SPOT/MATLAB/: CMakeLists.txt  CSTSS_MATLAB_mex.cpp  CSTSS_mex.m  find_loca.m  find_rpt.m  get_key.m  mosek_standard_sdp_test_1.m  mosek_standard_sdp_test_2.m  naive_extract.m  naive_extract_new.m  ordered_extract_CS.m  robust_extract_CS.m  supp_rpt.m
SPOT/PYTHON/: CMakeLists.txt  CSTSS_Python_pybind.cpp  CSTSS_pybind.py  compare_MATLAB.m  get_key.py  mosek_standard_sdp_test_1.py  mosek_standard_sdp_test_2.py  naive_extract.py  numpoly.py  robust_extract_CS.py  sorteig.py  sympy_clean.py  sympy_visualize.py  test_CSTSS_Python.py
SPOT/include/: Polys.h  Timer.h  gen_test.h
SPOT/src/: Polys.cpp  gen_test.cpp  main.cpp
pathinfo/: my_path.m
